components and register flow

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,5 +16,39 @@
   "password_strength_moderate": "Moderate password",
   "password_strength_strong": "Strong password",
   "show_password": "Show password",
-  "hide_password": "Hide password"
+  "hide_password": "Hide password",
+  "current_address": "Current Address",
+  "login_info": "Login Info",
+    "step2_title": "Your Profile",
+  "step2_description": "Basic information about your profile",
+  "sex_label": "Gender",
+  "sex_male": "Male",
+  "sex_female": "Female",
+  "sex_unknown": "Unknown",
+  "name_title": "Title",
+  "name_first": "First Name(s)",
+  "name_alternative": "Alternative Name(s)",
+  "name_last": "Last Name",
+  
+  "name_maiden": "Maiden Name",
+  "name_suffix": "Suffix",
+  "previous": "Back",
+  "next": "Next",
+  "name_multi_hint": "Type a name and press enter to add more",
+    "year": "Year",
+  "month": "Month",
+  "day": "Day",
+  "circa": "Circa",
+  "month_january": "January",
+  "month_february": "February",
+  "month_march": "March",
+  "month_april": "April",
+  "month_may": "May",
+  "month_june": "June",
+  "month_july": "July",
+  "month_august": "August",
+  "month_september": "September",
+  "month_october": "October",
+  "month_november": "November",
+  "month_december": "December"
 }
