--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -16,5 +16,38 @@
   "password_strength_moderate": "Parolă moderată",
   "password_strength_strong": "Parolă puternică",
   "show_password": "Afișează parola",
-  "hide_password": "Ascunde parola"
+  "hide_password": "Ascunde parola",
+  "current_address": "Adresa curentă",
+  "login_info": "Informații de autentificare",
+    "step2_title": "Profilul tău",
+  "step2_description": "Informații de bază despre profilul tău",
+  "sex_label": "Gen",
+  "sex_male": "Bărbat",
+  "sex_female": "Femeie",
+  "sex_unknown": "Necunoscut",
+  "name_title": "Titlu (Dr., Col., Gen., Pr., etc.)",
+  "name_first": "Prenume",
+  "name_alternative": "Alte nume",
+  "name_last": "Nume de familie",
+  "name_maiden": "Nume de fată",
+  "name_suffix": "Sufix",
+  "previous": "Înapoi",
+  "next": "Următorul",
+  "name_multi_hint": "Tastează un nume și apasă enter pentru a adăuga",
+    "year": "An",
+  "month": "Lună",
+  "day": "Zi",
+  "circa": "Aproximativ", 
+  "month_january": "Ianuarie",
+  "month_february": "Februarie",
+  "month_march": "Martie",
+  "month_april": "Aprilie",
+  "month_may": "Mai",
+  "month_june": "Iunie",
+  "month_july": "Iulie",
+  "month_august": "August",
+  "month_september": "Septembrie",
+  "month_october": "Octombrie",
+  "month_november": "Noiembrie",
+  "month_december": "Decembrie"
 }
